Fixed about popup. Styled the about page. Added a black shadow behind the popup.

--- a/droa858/css/about.css
+++ b/droa858/css/about.css
@@ -1,3 +1,8 @@
 #about {
-    background-color: rgba(255, 255, 255, 0.5);
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
 }
